# tka-scribe

./: .cursorrules  .env.example  .eslintignore  .eslintrc-unused-params.json  .eslintrc.json  .gitignore  .markdownlint.json  .mcp.json  .pre-commit-config-minimal.yaml  .pre-commit-config-simple.yaml  .pre-commit-config-universal.yaml  .pre-commit-config.yaml  .prettierignore  .pylintrc  ACCESSIBILITY_AUDIT.md  AGENT-PROMPT-ACCESSIBILITY.md  AGENT-PROMPT-ERROR-HANDLING.md  AGENT-PROMPT-IMPORT-SORTING.md  AGENT-PROMPT-LINTING-1-SIMPLE-FIXES.md  AGENT-PROMPT-LINTING-2-UNNECESSARY-CONDITIONS.md  AGENT-PROMPT-LINTING-3-UNSAFE-ARGUMENTS.md  AGENT-PROMPT-LINTING-4-EDGE-CASES.md  AGENT-PROMPT-MISCELLANEOUS.md  AGENT-PROMPT-NULLISH-AND-CONDITIONS.md  AGENT-PROMPT-TYPESCRIPT-SAFETY.md  AGENT-PROMPT-UNUSED-VARS-1-ABOUT-ADMIN-COLLECT.md  AGENT-PROMPT-UNUSED-VARS-2-ANIMATE.md  AGENT-PROMPT-UNUSED-VARS-3-CREATE-ASSEMBLE.md  AGENT-PROMPT-UNUSED-VARS-4-CREATE-CONSTRUCT.md  AGENT-PROMPT-UNUSED-VARS-5-CREATE-EDIT-GENERATE.md  AGENT-PROMPT-UNUSED-VARS-6-CREATE-SHARED-REST.md  AGENT-PROMPT-UNUSED-VARS.md  ANIMATE_MODULE_PROGRESS_REPORT.md  ANIMATE_MODULE_SCAFFOLDING.md  ANIMATION_EXTENSION_GUIDE.md  ANIMATION_REFACTOR_SUMMARY.md  Apps  BACKGROUND_GRADIENT_ENHANCEMENT.md  BACKGROUND_TAB_UPGRADES.md  BARREL_REMOVAL_COMPLETE.md  (+383 more)
.claude/: plan-visibility-overflow.md  rules.md  settings.local.json
.gemini/: settings.json
.github/: copilot-instructions.md  dependabot.yml
.husky/: post-checkout  pre-commit
.storybook/: main.ts  mock-di-container.ts  mock-inversify.ts  preview.ts
aggressive_removal_backups/: answer_options.py.backup  arrow_item.py.backup  browse_navigation_manager.py.backup  browse_navigation_stack.py.backup  browse_tab.py.backup  browse_view_model.py.backup  card.py.backup  construct_tab_view.py.backup  decorators.py.backup  event_integration.py.backup  exceptions.py.backup  export_panel.py.backup  frame_pool_service.py.backup  generate_panel.py.backup  generate_tab_controller.py.backup  graph_editor.py.backup  layout_manager.py.backup  layout_orchestrator.py.backup  learn_state.py.backup  learn_tab.py.backup  lesson_controls.py.backup  lesson_results_controller.py.backup  lesson_results_view.py.backup  lesson_selector_controller.py.backup  lifecycle_management.py.backup  loading_state_manager_service.py.backup  memory_management.py.backup  modern_navigation_sidebar.py.backup  modern_settings_service.py.backup  option_picker_manager.py.backup  option_picker_widget.py.backup  panel_factory.py.backup  production_toggle_debugger.py.backup  question_display.py.backup  resilient_panel_factory.py.backup  resource_management.py.backup  right_panel_tab_widget.py.backup  sequence_card_page_widget.py.backup  sequence_card_tab.py.backup  sequence_manager_adapter.py.backup  (+8 more)
analysis/: dead-code-analysis.json  ts-prune-full-report.txt
android-twa/: .gitignore  app-release-bundle.aab  app-release-signed.apk  app-release-signed.apk.idsig  build-twa.ps1  manifest-checksum.txt  tka-scribe-keystore.jks  twa-manifest.json
browse_thumbnails/: cache_metadata.json
config/: .env.example  FIREBASE_CONFIG_CHECKLIST.md  firebase-storage-cors.json
data/: __init__.py
data_modern/: MIGRATION_GUIDE.md  __init__.py
deployment/: .firebaserc  database.rules.json  firebase.json  firestore.indexes.json  firestore.rules  storage.rules
desktop/: application.pyi  fix_imports.py  import_config.py  presentation.pyi  pyproject.toml  pytest.ini  session_state.json  src.pyi  test_orientation_fix.py
desktop_backup_20250814_185104/: profiling_output.txt  pyrightconfig.json
dev-dist/: sw.js
dev-docs/: DYNAMIC_GLASS_MORPHISM_SYSTEM.md
docs/: AI-ASSISTED-WORKFLOW.md  AI_LESSONS_LEARNED_7-16.md  ANIMATION-SYSTEM-AUDIT.md  ANIMATION_SYSTEM_EXPLAINED.md  ANIMATOR-CANVAS-COMPARISON.md  ANIMATOR-CANVAS-REFACTOR.md  ARCHITECTURE_RESTRUCTURING_COMPLETE.md  AUTOMATED-RELEASE-IMPLEMENTATION.md  AUTOMATED-WORKFLOW-QUICKSTART.md  AVATAR_LOCOMOTION_MVP.md  AVATAR_LOCOMOTION_RESEARCH.md  BACKGROUND_TRANSITION_IMPLEMENTATION.md  BUNDLE-SIZE-MONITORING.md  CAP-DETECTION-ALGORITHM.md  CAP-METADATA-BACKFILL.md  CAP-PATTERN-TYPES.md  CAP-TAXONOMY.md  CAP_COMBINATIONS_PLAN.md  CONTAINER_QUERIES_IMPLEMENTATION.md  CREATE_SHORTCUTS_IMPLEMENTATION_SUMMARY.md  DEPENDENCY-AUDIT-SCORE.md  E2E-TEST-STRATEGY.md  ESLINT-9-MIGRATION-PLAN.md  FEEDBACK-WORKFLOW.md  FIRESTORE-INDEXES.md  GENERATE_CARD_SCENARIOS.md  IMPLEMENTING_CREATE_SHORTCUTS.md  INTEGRATING_CREATE_SHORTCUTS.md  KEYBOARD_SHORTCUTS_FIXES.md  LOOP-DETECTION-ALGORITHM.md  LOOP-PATTERN-TYPES.md  LOOP-TAXONOMY.md  MIGRATION-RELEASE-WORKFLOW.md  MVP-GUIDELINES.md  PRODUCTION-RELEASE-WORKFLOW.md  PROP-SCALING-REFERENCE.md  PWA_FULLSCREEN_BUTTON_DETECTION.md  README.md  RELEASE-QUICK-REFERENCE.md  RELEASE-SYSTEM-SUMMARY.md  (+22 more)
function_removal_backups/: config_registration.py.backup  decorators.py.backup
functions/: .gitignore  package.json
launcher/: COMPONENT_SPLIT_SUMMARY.md  HOVER_EFFECTS_SUMMARY.md  README_HORIZONTAL.md  __init__.py  application_grid.py  create_debug_config.py  diagnostic.py  dock_window.py  launcher_window.py  main.py  modern_launcher_window.py  run_simple.py  test_debugger_integration.py  test_fluent_widgets.py  test_force_output.py  test_horizontal_setup.py  test_json_parsing.py  test_minimal_imports.py  test_reliable_styling.py  tka_integration.py  vscode_debug.py
schemas/: README.md  beat-data-v2.json  core-enums.json  generated-types.ts  glyph-data.json  motion-data-v2.json  sequence-data-v2.json
scripts/: MIGRATE-USERS-README.md  add-all-missing-services.js  add-aria-hidden.ps1  add-v010-changelog-browser.js  add-v010-changelog.js  analyze-turn-patterns.cjs  archive-feedback.js  auto-label-caps.cjs  auto-label-loops.cjs  backfill-cap-metadata.js  backfill-github-releases.js  backfill-loop-metadata.js  batch-rerender-gallery.js  beat-pair-detection.cjs  benchmark-preview-rendering.ts  benchmark_performance_improvements.py  bundle-sequence-metadata.mjs  check-big-prop-widths.js  check-empty-feedback.js  check-environment.js  check-label.cjs  (+87 more)
(+13737 files in other folders)
