[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tka-monorepo"
version = "1.0.0"
description = "The Kinetic Alphabet Monorepo"
authors = [
    {name = "Austen Cloud", email = "tkaflowarts@gmail.com"}
]
dependencies = [
    "PyQt6>=6.4.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    "requests>=2.31.0",
    "pydantic>=2.0.0",
    "sqlalchemy>=2.0.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "black>=23.0.0", 
    "isort>=5.12.0",
    "pylint>=2.17.0",
    "mypy>=1.5.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.21.0"
]

[tool.black]
line-length = 100
target-version = ['py39']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.venv
  | build
  | dist
  | node_modules
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 100

[tool.pylint.master]
extension-pkg-whitelist = ["PyQt6"]
# Use relative paths that work from any directory
init-hook = '''
import sys
import os
# Get the directory containing this pyproject.toml file
project_root = os.path.dirname(os.path.abspath(__file__)) if '__file__' in globals() else os.getcwd()
# Add all source paths for import resolution based on ACTUAL structure
paths = [
    project_root,                                                           # Root
    os.path.join(project_root, "data"),                                    # Constants location
    os.path.join(project_root, "packages", "shared-types", "python"),     # tka_types location
    os.path.join(project_root, "packages", "constants", "python"),        # api_constants
    os.path.join(project_root, "launcher"),                               # Launcher app
    os.path.join(project_root, "src"),                                    # General src
    os.path.join(project_root, "src", "desktop", "legacy", "src"),       # Legacy app
    os.path.join(project_root, "src", "desktop", "modern", "src"),       # Modern app
    os.path.join(project_root, "packages"),                              # All packages
    os.path.join(project_root, "assets")                                 # Assets if exists
]
for path in paths:
    if os.path.exists(path) and path not in sys.path:
        sys.path.insert(0, path)
'''

[tool.pylint.typecheck]
generated-members = ["PyQt6.*"]

[tool.pylint.messages_control]
# Disable ALL the annoying warnings that are not actual errors
disable = [
    "C0330",  # Wrong hanging indentation (removed from pylint)
    "C0326",  # Bad whitespace (removed from pylint)
    "C0303",  # Trailing whitespace
    "C0301",  # Line too long
    "C0411",  # Wrong import order
    "C0415",  # Import outside toplevel - THIS SHOULD DISABLE YOUR ERRORS
    "W1203",  # logging-fstring-interpolation
    "W0718",  # broad-exception-caught
    "W0611",  # unused-import
    "W0613",  # unused-argument (common in Qt signal handlers)
    "W0621",  # redefined-outer-name
    "R0913",  # too-many-arguments
    "R0914",  # too-many-locals
    "R0912",  # too-many-branches
    "R0915",  # too-many-statements
    "R0201",  # no-self-use (common in Qt event handlers)
    "R0903",  # too-few-public-methods
    "C0103",  # invalid-name (Qt uses camelCase)
    "C0116",  # missing-function-docstring
    "C0115",  # missing-class-docstring
    "C0114",  # missing-module-docstring
    "import-outside-toplevel"  # Alternative way to disable C0415
]

[tool.pylint.format]
max-line-length = 120  # Be more lenient

[tool.pytest.ini_options]
testpaths = ["src/desktop/modern/tests", "tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --tb=short"

[tool.pyright]
# Include all source directories based on ACTUAL structure
include = [
    "src/desktop/legacy/src",
    "src/desktop/modern/src", 
    "launcher",
    "packages",
    "data",
    "tests"
]

# Exclude build artifacts and cache directories
exclude = [
    "**/node_modules",
    "**/__pycache__",
    "**/.*",
    "build",
    "dist",
    "**/.pytest_cache",
    "**/venv",
    "**/env"
]

# Define extra paths for import resolution - CORRECTED PATHS
extraPaths = [
    ".",                                            # Root directory
    "data",                                         # Where constants.py actually is
    "packages/shared-types/python",                 # Where tka_types.py actually is
    "packages/constants/python",                    # Where api_constants.py is
    "launcher",                                     # Launcher application
    "src",                                          # General src directory  
    "src/desktop/legacy/src",                      # Legacy app source
    "src/desktop/modern/src",                      # Modern app source
    "packages",                                     # All packages directory
    "assets"                                       # Shared assets
]

# Python version and type checking settings
pythonVersion = "3.12"
typeCheckingMode = "basic"

# Import resolution settings - RELAXED
reportMissingImports = "warning"                   # Changed from "error" to "warning"
reportMissingTypeStubs = false
reportUnusedImport = "none"                        # DISABLE unused import warnings
reportDuplicateImport = "warning"

# Fix the specific errors you're seeing - ALL SET TO NONE OR WARNING
reportReturnType = "warning"
reportArgumentType = "warning"
reportAttributeAccessIssue = "warning"
reportGeneralTypeIssues = "warning"
reportOptionalMemberAccess = "none"
reportOptionalSubscript = "none"
reportPrivateImportUsage = "none"                  # DISABLE
reportUnknownArgumentType = "none"
reportUnknownVariableType = "none"
reportIncompatibleMethodOverride = "none"
reportIncompatibleVariableOverride = "none"
reportIncompleteStub = "none"
reportInconsistentConstructor = "none"
reportMissingParameterType = "none"
reportMissingTypeArgument = "none"
reportPrivateUsage = "none"
reportTypeCommentUsage = "none"
reportUnknownLambdaType = "none"
reportUnknownMemberType = "none"
reportUnknownParameterType = "none"
reportUnnecessaryCast = "none"
reportUnnecessaryComparison = "none"
reportUnnecessaryContains = "none"
reportUnnecessaryIsInstance = "none"
reportUnusedClass = "none"
reportUnusedFunction = "none"
reportUnusedVariable = "none"